services/cert-redirect/overlays/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cert-redirect
spec:
  selector:
    app: cert-redirect
  ports:
    - name: http
      port: 80
      targetPort: http
